--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
+        "build-transform-light": "npx token-transformer tokens.json tokens/light.json global,light,theme global",
+        "build-transform-dark": "npx token-transformer tokens.json tokens/dark.json global,dark,theme global",
+        "build-transform": "npm run build-transform-light && npm run build-transform-dark",
         "build-sd": "node build.js",
         "build-tw": "postcss ./styles.css -o ./tailwind.css",
-        "build": "npm run build-sd && npm run build-tw"
+        "build": "npm run build-transform && npm run build-sd && npm run build-tw"
     },
     "dependencies": {
         "postcss-cli": "^9.0.1",
