fix(build): missing build of tokens/global.json

--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
+        "build-transform-global": "npx token-transformer tokens.json tokens/global.json global",
         "build-transform-light": "npx token-transformer tokens.json tokens/light.json global,light,theme global",
         "build-transform-dark": "npx token-transformer tokens.json tokens/dark.json global,dark,theme global",
-        "build-transform": "npm run build-transform-light && npm run build-transform-dark",
+        "build-transform": "npm run build-transform-global && npm run build-transform-light && npm run build-transform-dark",
         "build-sd": "node build.js",
         "build-tw": "postcss ./styles.css -o ./tailwind.css",
         "build": "npm run build-transform && npm run build-sd && npm run build-tw"
